--- a/main.css
+++ b/main.css
@@ -583,6 +583,10 @@ video {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -611,10 +615,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .bg-primary-bgGray {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 95% / var(--tw-bg-opacity, 1));
@@ -635,14 +635,14 @@ video {
   background-color: hsl(179 100% 13% / var(--tw-bg-opacity, 1));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .px-10 {
@@ -752,17 +752,8 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .xl\:mb-\[90px\] {
     margin-bottom: 90px;
-  }
-
-  .xl\:h-screen {
-    height: 100vh;
   }
 
   .xl\:max-w-\[920px\] {
@@ -781,29 +772,8 @@ video {
     justify-content: center;
   }
 
-  .xl\:rounded-full {
-    border-radius: 9999px;
-  }
-
   .xl\:rounded-lg {
     border-radius: 0.5rem;
-  }
-
-  .xl\:rounded-xl {
-    border-radius: 0.75rem;
-  }
-
-  .xl\:rounded-md {
-    border-radius: 0.375rem;
-  }
-
-  .xl\:rounded-3xl {
-    border-radius: 1.5rem;
-  }
-
-  .xl\:rounded-e-sm {
-    border-start-end-radius: 0.125rem;
-    border-end-end-radius: 0.125rem;
   }
 
   .xl\:px-0 {
@@ -814,6 +784,16 @@ video {
   .xl\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .xl\:py-\[90px\] {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+
+  .xl\:py-\[80px\] {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 
   .xl\:pr-8 {
